[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Map/Map.gd" type="Script" id=1]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="WallMesh" type="MeshInstance2D" parent="."]
light_mask = 2

[node name="WallBody" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="GoalMesh" type="MeshInstance2D" parent="."]

[node name="GoalArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 4
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="GoalArea"]
